--- a/about/a&a/style.css
+++ b/about/a&a/style.css
@@ -1,4 +1,5 @@
 @import url(/fonts/stylesheet.css);
+@import url(/transitions.css);
 
 @keyframes scrollBackground {
     0% {
@@ -448,4 +449,82 @@ button {
     height: 500px;
     margin-left: 20px;
     padding: 1em;
+}
+
+/* Mobile styles (max-width: 450px) */
+@media (max-width: 450px) {
+    .header, .headerTwo {
+        font-size: 1.5em;
+        height: 30vh;
+    }
+
+    .awardsMain, .achievementsMain {
+        flex-direction: column;
+        width: 90%;
+        margin: 1em auto;
+    }
+
+    .awardsText, .achievementsText {
+        padding-left: 0;
+        margin-right: 0;
+        text-align: center;
+    }
+
+    .awardsText h1, .achievementsText h1 {
+        font-size: 2rem;
+    }
+
+    .awardsText li, .achievementsText li {
+        font-size: 1rem;
+    }
+
+    .awardsImgs img, .achievementsImgs img {
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+    }
+
+    .social-icon {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+/* Tablet styles (max-width: 800px) */
+@media (max-width: 800px) {
+    .header, .headerTwo {
+        font-size: 2em;
+        height: 40vh;
+    }
+
+    .awardsMain, .achievementsMain {
+        flex-direction: column;
+        width: 85%;
+        margin: 1.5em auto;
+    }
+
+    .awardsText, .achievementsText {
+        padding-left: 0;
+        margin-right: 0;
+        text-align: center;
+    }
+
+    .awardsText h1, .achievementsText h1 {
+        font-size: 3rem;
+    }
+
+    .awardsText li, .achievementsText li {
+        font-size: 1.2rem;
+    }
+
+    .awardsImgs img, .achievementsImgs img {
+        width: 80%;
+        height: auto;
+        margin-left: 0;
+    }
+
+    .social-icon {
+        width: 45px;
+        height: 45px;
+    }
 }
