--- a/about/hobbies/style.css
+++ b/about/hobbies/style.css
@@ -1,4 +1,5 @@
 @import url(/fonts/stylesheet.css);
+@import url(/transitions.css);
 
 @keyframes scrollBackground {
     0% {
@@ -573,4 +574,80 @@ li a:hover{
 
 .two:hover{
     text-decoration: none;
+}
+
+/* Mobile styles (max-width: 450px) */
+@media (max-width: 450px) {
+    .hobbyOverall {
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+    }
+
+    .hobbyImg {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .hobbyText {
+        padding: 1em;
+        text-align: center;
+    }
+
+    .hobbyOverall h1 {
+        font-size: 2.5em;
+    }
+
+    .head {
+        font-size: 2em;
+        height: auto;
+        padding: 1em;
+    }
+
+    .head p {
+        font-size: 1.2em;
+    }
+
+    .social-icon {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+/* Tablet styles (max-width: 800px) */
+@media (max-width: 800px) {
+    .hobbyOverall {
+        flex-direction: column;
+        align-items: center;
+        width: 85%;
+    }
+
+    .hobbyImg {
+        max-width: 80%;
+        height: auto;
+    }
+
+    .hobbyText {
+        padding: 1.5em;
+        text-align: center;
+    }
+
+    .hobbyOverall h1 {
+        font-size: 3.5em;
+    }
+
+    .head {
+        font-size: 2.5em;
+        height: auto;
+        padding: 1.5em;
+    }
+
+    .head p {
+        font-size: 1.4em;
+    }
+
+    .social-icon {
+        width: 45px;
+        height: 45px;
+    }
 }
