--- a/about/style.css
+++ b/about/style.css
@@ -1,4 +1,5 @@
 @import url(/fonts/stylesheet.css);
+@import url(/transitions.css);
 
 @keyframes scrollBackground {
     0% {
@@ -487,5 +488,99 @@ span {
 
 html {
     scroll-behavior: smooth;
+}
+
+/* Mobile styles (max-width: 450px) */
+@media (max-width: 450px) {
+    .mainContent {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .profilePic {
+        width: 80vw;
+        height: 80vw;
+    }
+
+    .aboutMeText {
+        padding: 1rem;
+        margin-left: 0;
+        font-size: 0.9rem;
+    }
+
+    .aboutMeText h1 {
+        font-size: 2rem;
+    }
+
+    .aboutMeText h3 {
+        font-size: 1.5rem;
+    }
+
+    .hover-buttons {
+        width: 90%;
+        left: 5%;
+    }
+
+    .button-container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .hover-button {
+        height: 150px;
+    }
+
+    .social-icon {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+/* Tablet styles (max-width: 800px) */
+@media (max-width: 800px) {
+    .mainContent {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    .profilePic {
+        width: 60vw;
+        height: 60vw;
+    }
+
+    .aboutMeText {
+        padding: 1.5rem;
+        margin-left: 0;
+        font-size: 1rem;
+    }
+
+    .aboutMeText h1 {
+        font-size: 2.2rem;
+    }
+
+    .aboutMeText h3 {
+        font-size: 1.7rem;
+    }
+
+    .hover-buttons {
+        width: 80%;
+        left: 10%;
+    }
+
+    .button-container {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .hover-button {
+        height: 180px;
+    }
+
+    .social-icon {
+        width: 45px;
+        height: 45px;
+    }
 }
 
