--- a/projects/sitestyles.css
+++ b/projects/sitestyles.css
@@ -137,7 +137,7 @@ body {
     background-image: linear-gradient(to bottom, #000000, #666666);
     cursor: none !important;
     color: white;
-    font-family: 'helmet';
+
 }
 
 a{
@@ -161,6 +161,7 @@ button {
     text-decoration: none;
     line-height: 1.5;
     background-color: #666666;
+    margin-top: 100px;
 }
 
 .footerRow {
@@ -333,25 +334,15 @@ span {
     transform: translate(-50%, -50%) scale(1);
 }
 
-/* web page */
+/* site */
 
-.resume{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-}
-
-.resume img{
-    width: 500px;
-    margin-right: 16px;
-    border: rgb(157, 157, 157) 3px solid;
-}
-
-.downloads{
-    display: flex;
-    flex-direction: column;
-    margin-left: 16px;
+h1{
+    font-family: 'helmet';
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 2rem;
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .button, .flow, .drift, .css {
@@ -377,6 +368,8 @@ span {
     font-family: 'helmet';
     font-size: 2rem;
     text-decoration: none;
+    width: 50%;
+    left: 25%;
 }
 
 .button:before {
@@ -431,12 +424,47 @@ span {
     margin: 10px;
 }
 
+h2{
+    font-family: 'helmet';
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 2rem;
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+h3{
+    font-family: 'helmet';
+    font-size: 2rem;
+    text-align: center;
+    margin-top: 2rem;
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+p{
+    font-family: 'helmet';
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+li{
+    font-family: 'helmet';
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    text-decoration: none;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
 .buttonGroup a{
     height: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+    font-family: 'windows', Arial, sans-serif;
 }
 
 .flow:before {
@@ -497,142 +525,314 @@ span {
     color: #415bab;
 }
 
-.renderImgs {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    padding: 20px;
-    justify-items: center;
-}
-
-.renderImgs img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.renderImgs img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-}
-
-/* Popup styles */
-.image-popup {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 10000;
-    justify-content: center;
-    align-items: center;
-}
-
-.image-popup img {
-    max-width: 90%;
-    max-height: 90%;
-    border-radius: 8px;
+/* Intro Section */
+.intro {
+    text-align: center;
+    margin: 2rem auto;
+    padding: 2rem;
+    background: linear-gradient(to bottom, #032500, #000000);
+    color: rgb(218, 255, 214);
+    border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
-.image-popup .close-btn {
+.iflow {
+    background: linear-gradient(to bottom, #361e14, #000000);
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    color: #ffa074 !important;
+    text-shadow: none; 
+}
+
+.icss{
+    background: linear-gradient(to bottom, #210039, #000000);
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    color: #415bab !important;
+    text-shadow: none; 
+}
+
+/* Assets Section */
+.assets {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin: 2rem auto;
+    padding: 2rem;
+    left: 22%;
+}
+
+.assets .imgs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.assets .imgs img {
+    width: 45%;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease;
+}
+
+.assets .imgs img:hover {
+    transform: scale(1.05);
+}
+
+.assets .video {
+    width: 100%;
+    max-width: 600px;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+}
+
+/* Features Section */
+.features {
+    text-align: center;
+    margin: 2rem auto;
+    padding: 2rem;
+    color: rgb(218, 255, 214);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    width: 90%;
+}
+
+.fcss{
+    background: linear-gradient(to bottom, #000000, #141d36);
+}
+
+.fcss h2{
+    color: #415bab;
+    font-size: 2.5rem;
+    margin-bottom:1rem;
+}
+
+.features h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.features ul {
+    list-style: none;
+    padding: 0;
+    font-size: 1.2rem;
+    line-height: 1.8;
+}
+
+.features ul li {
+    margin: 0.5rem 0;
+    position: relative;
+    padding-left: 1.5rem;
+}
+
+.features ul li::before {
+    content: "✔";
+    position: absolute;
+    left: 0;
+    color: #45bf55;
+    font-size: 1.2rem;
+}
+
+.fcss h2{
+    color: #415bab;
+    font-size: 2.5rem;
+    margin-bottom:1rem;
+}
+
+.fflow{
+    background: linear-gradient(to bottom, #000000, #361e14);
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    h2{
+        color: #ff5000;
+        font-size: 2.5rem;
+        margin-bottom:1rem;
+    }
+    li{
+        color: #ffa074;
+    }
+}
+
+.fdrift{
+    background: linear-gradient(to bottom, #000000, #0c391f);
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    h2{
+        color: #76cb37;
+        font-size: 2.5rem;
+        margin-bottom:1rem;
+    }
+}
+
+.fcss{
+    background: linear-gradient(to bottom, #000000, #210039);
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    h2{
+        color: #415bab;
+        font-size: 2.5rem;
+        margin-bottom:1rem;
+    }
+    li{
+        color: #052ea7;
+    }
+}
+
+.bottomLink{
+    margin-top: 2rem;
+    font-size: 1.5rem;
+    font-family: 'windows', Arial, sans-serif;
+    padding: 0.5rem 1rem;;
+    justify-content: center;
+    display: flex;
+
+}
+
+.blf{
+    color: #ff5000;
+    font-family: 'windows', Arial, sans-serif;
+    left: 50%;
+}
+
+.blf:hover{
+    text-decoration: underline;
+    color: #ff5000;
+}
+
+
+.blc{
+    color: #415bab;
+    font-family: 'windows', Arial, sans-serif;
+    left: 50%;
+    
+}
+
+.bld{
+    color: #76cb37;
+    font-family: 'windows', Arial, sans-serif;
+    left: 50%;
+}
+
+.bld:hover{
+    text-decoration: underline;
+    color: #76cb37;
+}
+
+.blc:hover{
+    text-decoration: underline;
+    color: #415bab;
+}
+
+/* Carousel Modal Styles */
+.carousel-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.carousel-content {
+    display: block;
+    margin: 0;
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+}
+
+.close-carousel {
     position: absolute;
     top: 20px;
-    right: 20px;
-    font-size: 2rem;
-    color: white;
-    background: none;
-    border: none;
-    cursor: pointer;
-    z-index: 10001;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
     transition: color 0.3s ease;
+    cursor: pointer;
 }
 
-.image-popup .close-btn:hover {
-    color: red;
+.close-carousel:hover {
+    color: #f00;
 }
 
-.header h1 {
-    font-size: 3rem;
-    margin: 0;
-    color: rgb(218, 255, 214);
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.carousel-controls {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
 }
 
-@media (max-width: 450px) {
+.carousel-btn {
+    background-color: rgba(255, 255, 255, 0.2);
+    margin: 10px;
+    border: none;
+    color: white;
+    font-size: 30px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.carousel-btn:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+    transform: scale(1.1);
+}
+
+/* Ensure 'windows' font-family is correctly defined or provide a fallback */
+@font-face {
+    font-family: 'windows';
+    src: url('/fonts/windows.woff2') format('woff2'),
+         url('/fonts/windows.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* Responsive Styles for Mobile */
+@media (max-width: 768px) {
     body {
         font-size: 14px;
     }
 
-    .header h1 {
+    h1 {
+        font-size: 2.5rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
         font-size: 1.5rem;
     }
 
-    .header h2 {
+    p, li {
         font-size: 1rem;
     }
 
-    .resume {
-        flex-direction: column;
-        height: auto;
-        padding: 1rem;
-    }
-
-    .resume img {
-        width: 100%;
-        margin: 0 0 1rem 0;
-    }
-
-    .downloads {
-        margin-left: 0;
-        align-items: center;
-    }
-
-    .button {
-        font-size: 1rem;
-        padding: 1rem;
-    }
-
-    .projects h1 {
-        font-size: 1.25rem;
-    }
-
-    .projects h3 {
-        font-size: 1rem;
-    }
-
-    .group {
-        flex-direction: column;
-    }
-
-    .group img {
+    .button, .flow, .drift, .css {
         width: 90%;
-        margin: 10px 0;
-    }
-
-    .buttonGroup a {
-        margin-top: 10px;
-    }
-
-    .renderImgs {
-        grid-template-columns: 1fr;
-        gap: 10px;
-    }
-
-    .renderImgs img {
-        width: 90%;
-    }
-
-    .sidebar {
-        max-width: 80vw;
-    }
-
-    .sidebar a {
-        font-size: 2rem;
+        left: 5%;
+        padding: 1.5rem 1rem;
+        font-size: 1.5rem;
     }
 
     .footer {
@@ -650,105 +850,31 @@ span {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .social-icon {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-@media (max-width: 800px) {
-    body {
-        font-size: 16px;
-    }
-
-    .header h1 {
-        font-size: 2rem;
-    }
-
-    .header h2 {
-        font-size: 1.25rem;
-    }
-
-    .resume {
-        flex-direction: column;
-        height: auto;
-        padding: 2rem;
-    }
-
-    .resume img {
-        width: 80%;
-        margin: 0 0 1rem 0;
-    }
-
-    .downloads {
-        margin-left: 0;
-        align-items: center;
-    }
-
-    .button {
-        font-size: 1.25rem;
-        padding: 1.5rem;
-    }
-
-    .projects h1 {
-        font-size: 1.75rem;
-    }
-
-    .projects h3 {
-        font-size: 1.25rem;
-    }
-
-    .group {
-        flex-direction: column;
-    }
-
-    .group img {
-        width: 80%;
-        margin: 15px 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .buttonGroup a {
-        margin-top: 15px;
-    }
-
-    .renderImgs {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 15px;
-    }
-
-    .renderImgs img {
-        width: 100%;
-    }
-
     .sidebar {
-        max-width: 60vw;
+        max-width: 80vw;
     }
 
-    .sidebar a {
-        font-size: 2.5rem;
-    }
-
-    .footer {
+    .assets {
         flex-direction: column;
-        align-items: center;
-        text-align: center;
+        gap: 1rem;
     }
 
-    .footerRow {
-        flex: 1 1 100%;
-        margin-bottom: 1.5rem;
+    .assets .imgs img {
+        width: 90%;
     }
 
-    .socials {
-        grid-template-columns: repeat(3, 1fr);
+    .features {
+        width: 100%;
+        padding: 1rem;
     }
 
-    .social-icon {
-        width: 45px;
-        height: 45px;
+    .carousel-content {
+        max-width: 95%;
+        max-height: 70%;
+    }
+
+    .carousel-btn {
+        font-size: 20px;
+        padding: 5px 10px;
     }
 }
