--- a/about/style.css
+++ b/about/style.css
@@ -344,6 +344,8 @@ span {
     align-items: center;
     height: 100vh;
     position: relative;
+    max-height: fit-content;
+    z-index: 99999999;
 }
 
 .profilePic{
@@ -507,6 +509,7 @@ html {
         padding: 1rem;
         margin-left: 0;
         font-size: 0.9rem;
+        margin-bottom: 3rem; /* Increase margin for smaller screens */
     }
 
     .aboutMeText h1 {
@@ -538,7 +541,7 @@ html {
 }
 
 /* Tablet styles (max-width: 800px) */
-@media (max-width: 800px) {
+@media (max-width: 820px) {
     .mainContent {
         flex-direction: column;
         align-items: center;
@@ -554,6 +557,7 @@ html {
         padding: 1.5rem;
         margin-left: 0;
         font-size: 1rem;
+        margin-bottom: 2.5rem; /* Adjust margin for medium screens */
     }
 
     .aboutMeText h1 {
@@ -581,6 +585,61 @@ html {
     .social-icon {
         width: 45px;
         height: 45px;
+    }
+}
+
+/* Custom styles for screen width 1390px or less */
+@media (max-width: 1640px) {
+    .aboutMeText {
+        font-size: 0.9rem; 
+        line-height: 1.6; 
+    }
+
+    .aboutMeText h1 {
+        font-size: 2rem; /* Reduce heading size */
+    }
+
+    .aboutMeText h3 {
+        font-size: 1.5rem; /* Reduce subheading size */
+    }
+}
+
+/* Custom styles for screen width 1370px or less */
+@media (max-width: 1370px) {
+    .aboutMeText {
+        font-size: 0.8rem; /* Further reduce font size */
+        line-height: 1.5; /* Adjust line height */
+    }
+
+    .aboutMeText h1 {
+        font-size: 1.8rem; /* Reduce heading size */
+    }
+
+    .aboutMeText h3 {
+        font-size: 1.4rem; /* Reduce subheading size */
+    }
+}
+
+/* Custom styles for screen width 1175px or less */
+@media (max-width: 1175px) {
+    .aboutMeText {
+        font-size: 0.8rem; /* Further reduce font size */
+        line-height: 1.4; /* Adjust line height */
+    }
+
+    .aboutMeText h1 {
+        font-size: 1.3rem; /* Reduce heading size */
+    }
+
+    .aboutMeText h3 {
+        font-size: 1.3rem; /* Reduce subheading size */
+    }
+
+    .aboutMeText li {
+        font-size: 0.6rem; /* Reduce font size for list items */
+    }
+    .aboutMeText p {
+        font-size: 0.7rem; /* Reduce font size for paragraphs */
     }
 }
 
